# Colorized-Image-Project

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: VALIDATION_UPDATE_GUIDE.md  create_validation_split.ipynb  model_A.ipynb  model_B.ipynb  model_C.ipynb  model_C_lambda1_0.5x.ipynb  model_C_lambda1_2.0x.ipynb  model_C_lambda2_0.5x.ipynb  model_C_lambda2_2.0x.ipynb  model_D.ipynb  model_E.ipynb  model_F.ipynb  model_G.ipynb  model_H1.ipynb  model_H2.ipynb
results/A/: metrics_A.csv  training_history_A.csv
results/B/: metrics_B.csv  training_history_B.csv
results/C/: metrics_C.csv  training_history_C.csv
results/C_L1_HIGH/: metrics_C_L1_HIGH.csv  training_history_C_L1_HIGH.csv
results/C_L1_LOW/: metrics_C_L1_LOW.csv  training_history_C_L1_LOW.csv
results/C_PERCEPTUAL_HIGH/: metrics_C_PERCEPTUAL_HIGH.csv  training_history_C_PERCEPTUAL_HIGH.csv
results/C_PERCEPTUAL_LOW/: metrics_C_PERCEPTUAL_LOW.csv  training_history_C_PERCEPTUAL_LOW.csv
results/D/: metrics_D.csv  training_history_D.csv
results/E/: metrics_E.csv  training_history_E.csv
results/Evaluate/: inference_metrics_comparison.csv
results/F/: metrics_F.csv  training_history_F.csv
scripts/: device_config_test.py
