[project]
name = "colorized-image-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colormath>=3.0.0",
    "dotenv>=0.9.9",
    "graphviz>=0.21",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.4.10",
    "kagglehub>=0.3.13",
    "lpips>=0.1.4",
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "numpy>=2.3.4",
    "opencv-contrib-python>=4.11.0.86",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.9.0",
    "torchsummary>=1.5.1",
    "torchview>=0.2.7",
    "torchvision>=0.24.0",
    "torchviz>=0.0.3",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[dependency-groups]
dev = [
    "ruff>=0.14.5",
]

[tool.ruff]
# Allow lines to be as long as 100.
line-length = 150

# Include Jupyter Notebooks for linting and formatting
extend-include = ["*.ipynb"]

# Enable experimental/preview features (required for .ipynb formatting)
preview = true

# Match the project's Python requirement for accurate parsing/formatting
target-version = "py313"

[tool.ruff.lint]
# Add specific rules if desired.
# E = pycodestyle errors, F = Pyflakes, I = isort (imports)
select = ["E", "F", "I"]

# Ignore specific rules if needed
ignore = []

[tool.ruff.lint.isort]
# Group imports automatically
known-first-party = ["my_data_project"]

[tool.ruff.format]
# Keep formatting behavior explicit and stable
quote-style = "double"
indent-style = "space"
line-ending = "auto"
# Also format code blocks inside docstrings (optional)
docstring-code-format = true
